src/test/compile-fail/duplicate-visibility.rs
// error-pattern:unmatched visibility `pub`
extern {
    pub pub fn foo();
}
